Bug 424414 - "Overwrite" button of "File already exists" dialog has no icon
Summary: "Overwrite" button of "File already exists" dialog has no icon
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Overwrite dialog (other bugs)
Version First Reported In: git master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Nate Graham
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-19 13:04 UTC by Patrick Silva
Modified: 2020-07-24 17:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.73
Sentry Crash Report:


Attachments
screenshot (95.11 KB, image/png)
2020-07-19 13:04 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-07-19 13:04:09 UTC
SUMMARY
See the attached screenshot please.

EXPECTED RESULT
"Overwrite" button of "File already exists" dialog should have the same icon that we can see in the following screenshot
https://pointieststick.files.wordpress.com/2020/07/overwrite-icon.jpeg?w=576

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.73.0
Qt Version: 5.14.2
Comment 1 Patrick Silva 2020-07-19 13:04:43 UTC
Created attachment 130244 [details]
screenshot
Comment 2 Nate Graham 2020-07-23 19:25:33 UTC
Indeed it should!
Comment 3 Bug Janitor Service 2020-07-23 19:42:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/84
Comment 4 Nate Graham 2020-07-24 17:58:57 UTC
Git commit 09e379635842fa573cfd98d73e1747c0d360b4c8 by Nate Graham.
Committed on 24/07/2020 at 17:55.
Pushed by ngraham into branch 'master'.

[rename dialog] Port Overwrite button to KStandardGuiItem::Overwrite

This way we get the fancy new icon for free. And we can change the text,
icon, and tooltip only when needed.
FIXED-IN: 5.73

M  +8    -3    src/widgets/renamedialog.cpp

https://invent.kde.org/frameworks/kio/commit/09e379635842fa573cfd98d73e1747c0d360b4c8