[rename dialog] Port Overwrite button to KStandardGuiItem::Overwrite

This way we get the fancy new icon for free. And we can change the text,
icon, and tooltip only when needed.

BUG: 424414
FIXED-IN: 5.73